--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
+	rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Baires jet</title>
 </head>
@@ -16,7 +21,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logoyMenu">
-				<a href="index.html"><img src="img/bairesjet logo.png" alt="Logo"></a>
+				<a href="index.html"><img src="img/bairesjetlogo.png" alt="Logo"></a>
 				<div id="menuToggle">
 					<i class="fas fa-bars"></i>
 				</div>
