--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logoyMenu">
-				<a href="index.html"><img src="img/bairesjetlogo.png" alt="Logo"></a>
+				<a href="index.html"><img src="/img/bairesjetlogo.png" alt="Logo"></a>
 				<div id="menuToggle">
 					<i class="fas fa-bars"></i>
 				</div>
