--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html lang="en">
 
 <head>
+	<title>Vuelos privados Argentina, vuelos charter Argentina, taxi aéreo Argentina, vuelos ejecutivos Argentina,
+		alquiler aviones Argentina</title <meta name="description"
+		content="Taxi aéreo, vuelos charter, vuelos privados, vuelos ejecutivos, alquiler de aviones, vuelos de bautismo, paseos en avión, servicios aéreos, destinos y tarifas.">
+	<meta name="keywords"
+		content="vuelos privados, vuelos charter, taxi aereo, vuelos ejecutivos, vuelos sanitarios, alquiler aviones, alquiler jet, jet charter, jets privados, aviones charter, aviones privados, aviones ejecutivos, servicios aereos, traslados aereos, transporte aereo, paseos avion, paseos helicoptero, vuelos bautismo, vuelos martin garcia, vuelos estancias, bautismo avion, bautismo helicoptero, sobrevuelos avion, excursiones aereas, tours avion, tours helicoptero, vuelos panoramicos, tarifas vuelos, vuelos argentina, vuelos uruguay, vuelos punta del este, vuelos montevideo">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Baires Jet">
+	<meta name="robots" content="index, follow">
+	<meta name="distribution" content="global">
+
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+
+	<!-- Estilos y fuentes -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
-	rel="stylesheet">
+		rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Baires jet</title>
 </head>
 
 <body class="is-preload is-menu-visible">
@@ -21,7 +33,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logoyMenu">
-				<a href="index.html"><img src="/img/bairesjetlogo.png" alt="Logo"></a>
+				<a href="index.html"><img src="img/bairesjetlogo.png" alt="Logo"></a>
 				<div id="menuToggle">
 					<i class="fas fa-bars"></i>
 				</div>
@@ -91,7 +103,7 @@
 				</div>
 				<div id="servicios" class="inner tipos">
 					<article>
-						<a class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">UNO</h2>
 							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
@@ -101,7 +113,7 @@
 						</div>
 					</article>
 					<article>
-						<a class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">DOS</h2>
 							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
@@ -111,7 +123,7 @@
 						</div>
 					</article>
 					<article>
-						<a class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">TRES</h2>
 							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
@@ -121,7 +133,7 @@
 						</div>
 					</article>
 					<article>
-						<a class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">CUATRO</h2>
 							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
@@ -142,22 +154,22 @@
 
 					<section id="aviones" class="tipos avion">
 						<article data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Avion 1</h3>
 						</article>
 
 						<article data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Avion 2</h3>
 						</article>
 
 						<article data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Avion 3</h3>
 						</article>
 
 						<article data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Avion 4</h3>
 						</article>
 					</section>
@@ -170,7 +182,7 @@
 				<!-- Contenido del modal -->
 				<div class="modal-content">
 					<span class="close">&times;</span>
-					<h2 id="modal-title"></h2>
+					<h3 id="modal-title"></h3>
 					<p id="modal-description"></p>
 					<div id="modal-images"></div>
 				</div>
@@ -182,19 +194,19 @@
 				</div>
 				<div class="inner">
 					<div>
-						<h3>Baires jet</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-								amet
-								turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-								dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus
-								ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-								amet
-								turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-								dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursusipsum
-								dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-								amet
-								turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-								dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+						<h2>Baires jet</h2>
+						<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
+							amet
+							turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+							dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus
+							ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
+							amet
+							turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+							dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursusipsum
+							dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
+							amet
+							turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+							dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
 					</div>
 				</div>
 			</section>
