--- a/vuelos-privados-en-argentina.html.html
+++ b/vuelos-privados-en-argentina.html.html
@@ -3,7 +3,8 @@
 
 <head>
 	<title>Vuelos privados Argentina, vuelos charter Argentina, taxi aéreo Argentina, vuelos ejecutivos Argentina,
-		alquiler aviones Argentina</title <meta name="description"
+		alquiler aviones Argentina</title>
+	<meta name="description"
 		content="Taxi aéreo, vuelos charter, vuelos privados, vuelos ejecutivos, alquiler de aviones, vuelos de bautismo, paseos en avión, servicios aéreos, destinos y tarifas.">
 	<meta name="keywords"
 		content="vuelos privados, vuelos charter, taxi aereo, vuelos ejecutivos, vuelos sanitarios, alquiler aviones, alquiler jet, jet charter, jets privados, aviones charter, aviones privados, aviones ejecutivos, servicios aereos, traslados aereos, transporte aereo, paseos avion, paseos helicoptero, vuelos bautismo, vuelos martin garcia, vuelos estancias, bautismo avion, bautismo helicoptero, sobrevuelos avion, excursiones aereas, tours avion, tours helicoptero, vuelos panoramicos, tarifas vuelos, vuelos argentina, vuelos uruguay, vuelos punta del este, vuelos montevideo">
@@ -54,8 +55,8 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
-				<h1 class="major">La mejor forma de volar</h1>
-				<p>La cotizacion mas rapida del mercado</p>
+				<h1 class="major">Los mejores en Vuelos Privados</h1>
+				<p>Obtén cotizaciones rápidas y personalizadas para vuelos privados en Argentina.</p>
 			</div>
 		</section>
 
@@ -87,6 +88,17 @@
 								</div>
 							</div>
 						</div>
+						<div class="field tipoNave">
+							<div class="aeronave">
+								<label for="aircraftType">Tipo de Aeronave</label>
+								<select name="aircraftType" id="aircraftType">
+									<option value="piston">Piston</option>
+									<option value="turboprop">Turbohélice</option>
+									<option value="jet">Jet</option>
+									<option value="helicopter">Helicóptero</option>
+								</select>
+							</div>
+						</div>
 						<div class="actions">
 							<button type="submit" value="Send Message" class="button">enviar</button>
 						</div>
@@ -95,11 +107,12 @@
 			</div>
 		</section>
 
+
 		<!-- SERVICIOS -->
 		<section>
 			<section class="wrapper style2">
 				<div class="inner">
-					<h2 class="major servicio">Servicios</h2>
+					<h2 class="major servicio">Servicios de vuelos privados</h2>
 				</div>
 				<div id="servicios" class="inner tipos">
 					<article>
@@ -147,7 +160,7 @@
 			<!-- AVIONES -->
 			<section class="wrapper avi">
 				<div class="inner">
-					<h2 class="major">AVIONES</h2>
+					<h2 class="major">Aviones privados</h2>
 					<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat.
 						Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem
 						lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
@@ -155,22 +168,42 @@
 					<section id="aviones" class="tipos avion">
 						<article data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Avion 1</h3>
+							<h3>Learjet 60</h3>
 						</article>
 
 						<article data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Avion 2</h3>
+							<h3>King air 200</h3>
 						</article>
 
 						<article data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Avion 3</h3>
+							<h3>King air 90</h3>
 						</article>
 
 						<article data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Avion 4</h3>
+							<h3>Learjet 35</h3>
+						</article>
+
+						<article data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Fairchild Metroliner III</h3>
+						</article>
+
+						<article data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Cessna citation III</h3>
+						</article>
+
+						<article data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Challenger 600</h3>
+						</article>
+
+						<article data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Navajo 350</h3>
 						</article>
 					</section>
 
@@ -190,23 +223,20 @@
 
 			<section id="nosotros" class="wrapper style2 align-center">
 				<div class="inner">
-					<h2 class="major servicio">Nosotros</h2>
+					<h2 class="major">Nosotros</h2>
 				</div>
 				<div class="inner">
 					<div>
-						<h2>Baires jet</h2>
-						<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-							amet
-							turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-							dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus
-							ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-							amet
-							turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-							dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursusipsum
-							dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-							amet
-							turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-							dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+						<p class="descripcionNosotros" >Bienvenidos a <strong>BairesJet</strong>, líderes en la prestigiosa industria de vuelos privados y charters en
+							Buenos Aires, Argentina. Nos distingue la <strong>excelencia</strong> y la dedicación en proporcionar
+							experiencias exclusivas. Como miembros de <strong>ARGUS</strong>, garantizamos estándares de <strong>seguridad</strong> y
+							<strong>calidad</strong> superiores. Con una flota diversificada que incluye aeronaves <strong>turbohélices</strong>, <strong>jets</strong> y
+							helicópteros, ofrecemos soluciones de transporte personalizadas que satisfacen las más
+							exigentes necesidades. Además, nuestras aeronaves están diseñadas para adaptarse a
+							diferentes tipos de pistas, asegurando la máxima <strong>flexibilidad</strong> en sus viajes. Confíe en
+							<strong>BairesJet</strong> para vuelos nacionales e internacionales, donde la <strong>seguridad</strong>, la <strong>elegancia</strong> y la
+							<strong>eficiencia</strong> convergen.</p>
+							
 					</div>
 				</div>
 			</section>
