--- a/vuelos-privados-en-argentina.html.html
+++ b/vuelos-privados-en-argentina.html.html
@@ -114,7 +114,7 @@
 				<div class="inner">
 					<h2 class="major servicio">Servicios de vuelos privados</h2>
 				</div>
-				<div id="servicios" class="inner tipos">
+				<div id="servicios" class="inner tipos servi">
 					<article>
 						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
