--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 			</div>
 		</section>
 
-		<button id="boton-flotante">¡Haz clic aquí!</button>
+		<i id="botonFlotante" class="fab fa-whatsapp"></i>
+		
 
 	</div>
 
