--- a/index.html
+++ b/index.html
@@ -118,31 +118,22 @@
 					<article>
 						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
-							<h2 class="major">UNO</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-								amet
-								turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-								dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+							<h2 class="major">Vuelos Privados</h2>
+							<p>Puedes sentirte <strong>como en casa</strong> mientras viajas a tus <strong>vacaciones familiares</strong> o te preparas para tu próximo éxito <strong>profesional</strong>. Vive nuestros <strong>aviones</strong> como <strong>tuyos</strong> con el respaldado por nuestra <strong>tripulación</strong>, que siempre cuidará hasta el más mínimo detalle de tu experiencia.</p>
 						</div>
 					</article>
 					<article>
 						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
-							<h2 class="major">DOS</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-								amet
-								turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-								dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+							<h2 class="major">Vuelos Charter</h2>
+							<p><strong>Organiza viajes</strong> para <strong>grupos grandes</strong> y vive el <strong>confort</strong>, <strong>exclusividad</strong> y <strong>seguridad</strong> de un vuelo de <strong>primer nivel</strong>. Cuenta con <strong>servicios personalizados</strong> y déjate sorprender por una <strong>tripulación</strong> dedicada a brindarte a ti y tus invitados la mejor atención.</p>
 						</div>
 					</article>
 					<article>
 						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
-							<h2 class="major">TRES</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit
-								amet
-								turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
-								dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+							<h2 class="major">Vuelos Helitour</h2>
+							<p><strong>Descubre</strong> las <strong>maravillas de la ciudad</strong> desde un nuevo ángulo y disfruta un <strong>panorama incomparable</strong> desde las alturas con este <strong>City Tour en helicóptero</strong>.</p>
 						</div>
 					</article>
 					<article>
