--- a/index.html
+++ b/index.html
@@ -68,25 +68,24 @@
 						<div class="fields">
 							<div class="column">
 								<div class="field">
-									<label for="from">From</label>
+									<label for="from">Origen</label>
 									<input type="text" name="from" id="from" />
 								</div>
 								<div class="field">
-									<label for="to">To</label>
+									<label for="to">Destino</label>
 									<input type="text" name="to" id="to" />
 								</div>
 							</div>
 							<div class="column">
 								<div class="field">
-									<label for="quantity">Number of People</label>
-									<input type="text" name="quantity" id="quantity" pattern="[0-9]*"
-										oninput="validateNumberInput(this)" />
+									<label for="quantity">Cantidad de pasajeros</label>
+									<input type="text" name="quantity" id="quantity" pattern="[0-9]*" oninput="validateNumberInput(this)" />
 								</div>
 								<div class="field">
-									<label for="contactEmail">Contact Email</label>
+									<label for="contactEmail">Email de contacto</label>
 									<input type="email" name="contactEmail" id="contactEmail" />
 								</div>
-							</div>
+							</div>							
 						</div>
 						<div class="field tipoNave">
 							<div class="aeronave">
