--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
 
 
 		<!-- Banner -->
-		<section id="banner">
+		<section id="banner" style="background-image: url('img/fondo1.jpg');">
 			<div class="inner">
 				<h1 class="major">Los mejores en Vuelos Privados</h1>
 				<p>Obtén cotizaciones rápidas y personalizadas para vuelos privados en Argentina.</p>
 			</div>
 		</section>
+		
 
 		<section id="form">
 			<div class="inner">
