--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<p>Obtén cotizaciones rápidas y personalizadas para vuelos privados en Argentina.</p>
 			</div>
 		</section>
-		
+
 
 		<section id="form">
 			<div class="inner">
@@ -80,13 +80,14 @@
 							<div class="column">
 								<div class="field">
 									<label for="quantity">Cantidad de pasajeros</label>
-									<input type="text" name="quantity" id="quantity" pattern="[0-9]*" oninput="validateNumberInput(this)" />
+									<input type="text" name="quantity" id="quantity" pattern="[0-9]*"
+										oninput="validateNumberInput(this)" />
 								</div>
 								<div class="field">
 									<label for="contactEmail">Email de contacto</label>
 									<input type="email" name="contactEmail" id="contactEmail" />
 								</div>
-							</div>							
+							</div>
 						</div>
 						<div class="field tipoNave">
 							<div class="aeronave">
@@ -119,21 +120,31 @@
 						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Privados</h2>
-							<p>Puedes sentirte <strong>como en casa</strong> mientras viajas a tus <strong>vacaciones familiares</strong> o te preparas para tu próximo éxito <strong>profesional</strong>. Vive nuestros <strong>aviones</strong> como <strong>tuyos</strong> con el respaldado por nuestra <strong>tripulación</strong>, que siempre cuidará hasta el más mínimo detalle de tu experiencia.</p>
+							<p>Puedes sentirte <strong>como en casa</strong> mientras viajas a tus <strong>vacaciones
+									familiares</strong> o te preparas para tu próximo éxito
+								<strong>profesional</strong>. Vive nuestros <strong>aviones</strong> como
+								<strong>tuyos</strong> con el respaldado por nuestra <strong>tripulación</strong>, que
+								siempre cuidará hasta el más mínimo detalle de tu experiencia.</p>
 						</div>
 					</article>
 					<article>
 						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Charter</h2>
-							<p><strong>Organiza viajes</strong> para <strong>grupos grandes</strong> y vive el <strong>confort</strong>, <strong>exclusividad</strong> y <strong>seguridad</strong> de un vuelo de <strong>primer nivel</strong>. Cuenta con <strong>servicios personalizados</strong> y déjate sorprender por una <strong>tripulación</strong> dedicada a brindarte a ti y tus invitados la mejor atención.</p>
+							<p><strong>Organiza viajes</strong> para <strong>grupos grandes</strong> y vive el
+								<strong>confort</strong>, <strong>exclusividad</strong> y <strong>seguridad</strong> de
+								un vuelo de <strong>primer nivel</strong>. Cuenta con <strong>servicios
+									personalizados</strong> y déjate sorprender por una <strong>tripulación</strong>
+								dedicada a brindarte a ti y tus invitados la mejor atención.</p>
 						</div>
 					</article>
 					<article>
 						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Helitour</h2>
-							<p><strong>Descubre</strong> las <strong>maravillas de la ciudad</strong> desde un nuevo ángulo y disfruta un <strong>panorama incomparable</strong> desde las alturas con este <strong>City Tour en helicóptero</strong>.</p>
+							<p><strong>Descubre</strong> las <strong>maravillas de la ciudad</strong> desde un nuevo
+								ángulo y disfruta un <strong>panorama incomparable</strong> desde las alturas con este
+								<strong>City Tour en helicóptero</strong>.</p>
 						</div>
 					</article>
 				</div>
@@ -143,50 +154,64 @@
 			<section class="wrapper avi">
 				<div class="inner">
 					<h2 class="major">Aviones privados</h2>
-					<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat.
-						Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem
-						lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+					<p>Explora nuestra selección de <strong>aviones privados</strong>, desde el <strong>Gulfstream
+							5</strong> hasta el <strong>Learjet 60</strong>. <strong>Confort</strong>,
+						<strong>lujo</strong> y <strong>rendimiento</strong> incomparables en cada vuelo. Equipados con
+						lo último en tecnología y comodidades para una experiencia de vuelo única. ¡Viaja con nosotros y
+						descubre el <strong>lujo</strong> en el aire!</p>
 
 					<section id="aviones" class="tipos avion">
-						<article data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Learjet 60</h3>
-						</article>
-
-						<article data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>King air 200</h3>
-						</article>
-
-						<article data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>King air 90</h3>
-						</article>
-
-						<article data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Learjet 35</h3>
-						</article>
 
 						<article data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Fairchild Metroliner III</h3>
+							<h3>Gulfstream 5</h3>
 						</article>
 
 						<article data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
-							<h3>Cessna citation III</h3>
-						</article>
-
-						<article data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Challenger 600</h3>
 						</article>
 
+						<article data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Learjet 60</h3>
+						</article>
+
 						<article data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Learjet 45</h3>
+						</article>
+
+						<article data-id="5" data-title="Avion 5" data-description="Descripción del Avion 5">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Learjet 35</h3>
+						</article>
+
+						<article data-id="6" data-title="Avion 6" data-description="Descripción del Avion 6">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Cessna citation III</h3>
+						</article>
+
+						<article data-id="7" data-title="Avion 7" data-description="Descripción del Avion 7">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>King air 200</h3>
+						</article>
+
+						<article data-id="8" data-title="Avion 8" data-description="Descripción del Avion 8">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>King air 90</h3>
+						</article>
+
+						<article data-id="9" data-title="Avion 9" data-description="Descripción del Avion 9">
+							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<h3>Fairchild Metroliner III</h3>
+						</article>
+
+						<article data-id="10" data-title="Avion 10" data-description="Descripción del Avion 10">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Navajo 350</h3>
 						</article>
+
 					</section>
 
 				</div>
@@ -209,16 +234,23 @@
 				</div>
 				<div class="inner">
 					<div>
-						<p class="descripcionNosotros" >Bienvenidos a <strong>BairesJet</strong>, líderes en la prestigiosa industria de vuelos privados y charters en
-							Buenos Aires, Argentina. Nos distingue la <strong>excelencia</strong> y la dedicación en proporcionar
-							experiencias exclusivas. Como miembros de <strong>ARGUS</strong>, garantizamos estándares de <strong>seguridad</strong> y
-							<strong>calidad</strong> superiores. Con una flota diversificada que incluye aeronaves <strong>turbohélices</strong>, <strong>jets</strong> y
+						<p class="descripcionNosotros">Bienvenidos a <strong>BairesJet</strong>, líderes en la
+							prestigiosa industria de vuelos privados y charters en
+							Buenos Aires, Argentina. Nos distingue la <strong>excelencia</strong> y la dedicación en
+							proporcionar
+							experiencias exclusivas. Como miembros de <strong>ARGUS</strong>, garantizamos estándares de
+							<strong>seguridad</strong> y
+							<strong>calidad</strong> superiores. Con una flota diversificada que incluye aeronaves
+							<strong>turbohélices</strong>, <strong>jets</strong> y
 							helicópteros, ofrecemos soluciones de transporte personalizadas que satisfacen las más
 							exigentes necesidades. Además, nuestras aeronaves están diseñadas para adaptarse a
-							diferentes tipos de pistas, asegurando la máxima <strong>flexibilidad</strong> en sus viajes. Confíe en
-							<strong>BairesJet</strong> para vuelos nacionales e internacionales, donde la <strong>seguridad</strong>, la <strong>elegancia</strong> y la
-							<strong>eficiencia</strong> convergen.</p>
-							
+							diferentes tipos de pistas, asegurando la máxima <strong>flexibilidad</strong> en sus
+							viajes. Confíe en
+							<strong>BairesJet</strong> para vuelos nacionales e internacionales, donde la
+							<strong>seguridad</strong>, la <strong>elegancia</strong> y la
+							<strong>eficiencia</strong> convergen.
+						</p>
+
 					</div>
 				</div>
 			</section>
@@ -244,7 +276,7 @@
 		</section>
 
 		<i id="botonFlotante" class="fab fa-whatsapp"></i>
-		
+
 
 	</div>
 
