--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 		<section id="form">
 			<div class="inner">
-				<h2 class="major">Contiza por mail</h2>
+				<h2 class="major">Cotiza por mail</h2>
 				<div class="form-contact-wrapper">
 					<form method="post" action="#">
 						<div class="fields">
@@ -275,7 +275,11 @@
 			</div>
 		</section>
 
-		<i id="botonFlotante" class="fab fa-whatsapp"></i>
+		<div id="contenedorBoton">
+			<span id="textoBoton"><strong>Cotiza rápido</strong></span>
+			<i id="botonFlotante" class="fab fa-whatsapp"></i>
+		  </div>
+		  
 
 
 	</div>
