--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 		</section>
 
 		<div id="contenedorBoton">
-			<span id="textoBoton"><strong>Cotiza rápido</strong></span>
+			<span id="textoBoton"><strong>Cotiza<br>rápido</strong></span>
 			<i id="botonFlotante" class="fab fa-whatsapp"></i>
 		  </div>
 		  
