--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				</div>
 				<div id="servicios" class="inner tipos servi">
 					<article>
-						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+						<a class="image"><img src="img/Vuelos_Privados.png" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Privados</h2>
 							<p>Puedes sentirte <strong>como en casa</strong> mientras viajas a tus <strong>vacaciones
@@ -128,7 +128,7 @@
 						</div>
 					</article>
 					<article>
-						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+						<a class="image"><img src="img/Vuelos_Charter.png" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Charter</h2>
 							<p><strong>Organiza viajes</strong> para <strong>grupos grandes</strong> y vive el
@@ -139,7 +139,7 @@
 						</div>
 					</article>
 					<article>
-						<a class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+						<a class="image"><img src="img/Vuelos_Helitour.png" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Helitour</h2>
 							<p><strong>Descubre</strong> las <strong>maravillas de la ciudad</strong> desde un nuevo
